--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+
+/*
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -78,11 +80,13 @@
   padding: 0;
   margin: 0;
 }
-
+*/
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #efefef;
+  color: black;
 }
 
 body {
@@ -104,4 +108,11 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+h2{
+  font-size: 62px;
+  margin: 20px 0 0 0;
+
+
 }
