--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -71,13 +71,22 @@
 
 .title {
     height: 25px;
-    width: 70px;
+    font-size: 18px;
+    font-weight: bolder;
+    width: 80px;
 }
 
 .button {
     justify-content: right;
-    display: flex;
-    flex-wrap: wrap;
     right: 0;
     top: 0;
+    height: 25px;
+    width: 25px;
+
+}
+
+.bigdiv{
+    display: flex;
+    flex-direction: row;
+    margin: 2px;
 }
